Section my-story terminada

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <h2>Wanna <br> know my <br> story?</h2>
             </div>
             <div class="story">
-                <p>How I went from Industrial Design to Communication Design. Plus, I made a nice moldboard I want you to see!</p>
-                <div class="line">------------</div>
+                <p>How I went from Industrial Design to Communication <br> Design. Plus, I made a nice moldboard I want you to see!</p>
+                <div class="line"></div>
                 <a href="">Read All About It</a>
             </div>
             
